syntax = "proto3";

package wireflow.signal;
option go_package = "internal/grpc";

// 定义信令包类型
enum PacketType {
  UNKNOWN = 0;
  HANDSHAKE_SYN = 1;  // 发起握手：你在吗？
  HANDSHAKE_ACK = 2;  // 响应握手：我在，可以交换。
  OFFER = 3;    // 业务数据：Offer
  ANSWER = 4; //
  MESSAGE = 5;
}

enum DialerType {
  ICE = 0;
  WRRP = 1;
}

message SignalPacket {
  PacketType type = 1;
  DialerType dialer = 2;
  uint64 sender_id = 3;
  oneof payload {
    Handshake handshake = 4;
    Offer offer = 5;
    Message message = 6;
  }
}

message Offer {
  string ufrag = 1;
  string pwd = 2;
  uint64 tieBreaker = 3;
  string candidate = 4;
  string vip = 5;
  bytes current = 6;
  string srcPeerID = 7 ;
}


// for wrapper Message from api server
message Message {
  bytes content = 1;
}

message Handshake {
  int64 timestamp = 1;
  uint64 sid = 2;
}