// Copyright 2025 The Wireflow Authors, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package resource

import (
	"context"
	"crypto/sha256"
	"encoding/json"
	"fmt"
	"os"
	"path/filepath"
	"sync"
	"wireflow/internal/core/infra"
	"wireflow/internal/grpc"
	"wireflow/internal/log"

	wireflowv1alpha1 "wireflow/api/v1alpha1"

	"google.golang.org/protobuf/proto"
	corev1 "k8s.io/api/core/v1"
	"k8s.io/apimachinery/pkg/labels"
	"k8s.io/apimachinery/pkg/runtime"
	clientgoscheme "k8s.io/client-go/kubernetes/scheme"
	"k8s.io/client-go/rest"
	"k8s.io/client-go/tools/cache"
	"k8s.io/client-go/tools/clientcmd"
	ctrl "sigs.k8s.io/controller-runtime"
	cache2 "sigs.k8s.io/controller-runtime/pkg/cache"
	"sigs.k8s.io/controller-runtime/pkg/client"
	logf "sigs.k8s.io/controller-runtime/pkg/log"
	"sigs.k8s.io/controller-runtime/pkg/log/zap"
	"sigs.k8s.io/controller-runtime/pkg/manager"
)

type Client struct {
	client  client.Client
	manager manager.Manager

	log *log.Logger

	hashMu         sync.RWMutex
	lastPushedHash map[string]string
	sender         infra.SignalService
}

var scheme = runtime.NewScheme()

func init() {
	_ = clientgoscheme.AddToScheme(scheme)
	_ = wireflowv1alpha1.AddToScheme(scheme)
}

func init() {
	// æ³¨å†Œ Kubernetes å†…ç½®èµ„æº Schemeï¼ˆä¾‹å¦‚ Pod, Deploymentï¼‰
	_ = clientgoscheme.AddToScheme(scheme)

	// ğŸš¨ æ³¨å†Œä½ çš„ CRD Schemeï¼ˆå¿…é¡»ï¼ï¼‰
	// è¿™ä½¿å¾— client.Client çŸ¥é“å¦‚ä½•åºåˆ—åŒ–å’Œååºåˆ—åŒ–ä½ çš„ Network èµ„æº
	_ = wireflowv1alpha1.AddToScheme(scheme)

	// å¦‚æœæœ‰å…¶ä»–è‡ªå®šä¹‰èµ„æºï¼Œä¹Ÿéœ€åœ¨æ­¤æ³¨å†Œ
}

func NewClient(signal infra.SignalService, mgr manager.Manager) (*Client, error) {
	ctx := context.Background()
	logger := log.GetLogger("crd-client")

	// 1. Define Zap Options
	// By default, it uses Production JSON format.
	// opts.Development = true provides a more human-readable text output (recommended for local development).
	opts := zap.Options{
		Development: true,
		// DisableStacktrace: true, // You may want to disable stack traces for cleaner logs
	}

	// 2. Initialize the log using the options
	zapLogger := zap.New(zap.UseFlagOptions(&opts))

	// 3. Set the initialized log for controller-runtime
	logf.SetLogger(zapLogger)

	// 2. è·å– Kubernetes é…ç½®
	config, err := loadKubeConfig()
	if err != nil {
		return nil, err
	}

	// 3. åˆ›å»º client-runtime çš„é€šç”¨ Client
	crdClient, err := client.New(config, client.Options{Scheme: scheme})
	if err != nil {
		logger.Error("Error creating client", err)
	}

	client := &Client{
		client:         crdClient,
		lastPushedHash: make(map[string]string),
		log:            logger,
		sender:         signal,
		manager:        mgr,
	}

	client.log.Info("Starting CRD Status Monitoring Agent...")
	// 2. è·å– Informer å¹¶æ³¨å†Œäº‹ä»¶å¤„ç†å™¨
	informer, err := mgr.GetCache().GetInformer(ctx, &corev1.ConfigMap{})
	if err != nil {
		client.log.Error("failed to get informer for configMap", err)
		return nil, err
	}

	// 3. æ³¨å†Œäº‹ä»¶å›è°ƒå‡½æ•°
	informer.AddEventHandler(cache.ResourceEventHandlerFuncs{
		AddFunc: func(obj interface{}) {
			logger.Info("Received add event for configMap", "obj", obj)
			client.handleConfigMapEvent(ctx, obj, "ADD")
		},
		UpdateFunc: func(oldObj, newObj interface{}) {
			// é»˜è®¤ Informer å³ä½¿ RV æ²¡å˜ä¹Ÿä¼šè§¦å‘ Updateã€‚
			// å®é™…ä¸šåŠ¡ä¸­ï¼Œæ‚¨å¯èƒ½éœ€è¦æ¯”è¾ƒæ–°æ—§å¯¹è±¡çš„ ResourceVersion æˆ– Status å­—æ®µæ¥è¿‡æ»¤ã€‚
			logger.Info("Received update event for configMap", "oldObj", oldObj, "newObj", newObj)
			client.handleConfigMapEvent(ctx, newObj, "UPDATE")
		},
		DeleteFunc: func(obj interface{}) {
			logger.Info("Received delete event for configMap", "obj", obj)
			client.handleConfigMapEvent(ctx, obj, "DELETE")
		},
	})
	return client, nil
}

func (c *Client) Start() error {
	var err error
	// 3. å¯åŠ¨ Manager (è¿™å°†å¯åŠ¨æ‰€æœ‰çš„ Informer å’Œç¼“å­˜)
	if err = c.manager.Start(context.Background()); err != nil {
		c.log.Error("problem running manager", err)
		return err
	}

	return nil
}

// loadKubeConfig å°è¯•åŠ è½½é›†ç¾¤å†…é…ç½®æˆ–æœ¬åœ° kubeconfig
func loadKubeConfig() (*rest.Config, error) {
	// å°è¯•åŠ è½½é›†ç¾¤å†…é…ç½®ï¼ˆå¦‚æœåœ¨ Pod ä¸­è¿è¡Œï¼‰
	config, err := rest.InClusterConfig()
	if err == nil {
		return config, nil
	}

	// å°è¯•åŠ è½½æœ¬åœ° kubeconfig
	kubeconfig := filepath.Join(os.Getenv("HOME"), ".kube", "config")
	if _, err := os.Stat(kubeconfig); os.IsNotExist(err) {
		return nil, fmt.Errorf("kubeconfig file not found at %s", kubeconfig)
	}

	return clientcmd.BuildConfigFromFlags("", kubeconfig)
}

// æ ¸å¿ƒäº‹ä»¶å¤„ç†å‡½æ•°
func (c *Client) handleConfigMapEvent(ctx context.Context, obj interface{}, eventType string) {
	cm, ok := obj.(*corev1.ConfigMap)
	if !ok {
		c.log.Info("Received object of unexpected type", "obj", obj)
		return
	}

	// æ‰“å°å…³é”®ä¿¡æ¯ï¼ŒåŒ…æ‹¬ ResourceVersion æ¥è¿½è¸ªå˜åŒ–
	c.log.Info(">>> Event Detected <<<",
		"eventType", eventType,
		"namespace", cm.Namespace,
		"name", cm.Name,
		"version", cm.ResourceVersion,
	)

	// å¯ä»¥åœ¨è¿™é‡Œæ·»åŠ æ‚¨çš„è‡ªå®šä¹‰ä¸šåŠ¡é€»è¾‘ï¼Œä¾‹å¦‚è§¦å‘é…ç½®æ¨é€

	var message infra.Message
	if err := json.Unmarshal([]byte(cm.Data["config.json"]), &message); err != nil {
		c.log.Error("Failed to unmarshal message", err)
	}

	c.pushToNode(ctx, message.Current.PublicKey, &message)
	c.log.Info(">>> Message pushed to node success <<<", "namespace", cm.Namespace, "appId", message.Current.PublicKey, "version", cm.ResourceVersion)
}

func (c *Client) pushToNode(ctx context.Context, peerId string, msg *infra.Message) error {
	// 1. è®¡ç®—æ¶ˆæ¯å“ˆå¸Œ
	msgHash := c.computeMessageHash(msg)

	// 2. æ£€æŸ¥æ˜¯å¦ä¸ä¸Šæ¬¡æ¨é€ç›¸åŒ
	c.hashMu.RLock()
	lastHash, exists := c.lastPushedHash[peerId]
	c.hashMu.RUnlock()

	if exists && lastHash == msgHash {
		c.log.Info("Message unchanged, skipping push", "peerId", peerId)
		return nil
	}

	// 3. æ¨é€æ¶ˆæ¯
	data, err := json.Marshal(msg)
	if err != nil {
		return err
	}

	packet := &grpc.SignalPacket{
		SenderId: "manager",
		Type:     grpc.PacketType_MESSAGE,
		Payload: &grpc.SignalPacket_Message{
			Message: &grpc.Message{
				Content: data,
			},
		},
	}

	content, err := proto.Marshal(packet)
	if err != nil {
		return err
	}

	if err := c.sender.Send(ctx, peerId, content); err != nil {
		return fmt.Errorf("failed to send message to node %s: %v", peerId, err)
	}

	// 4. æ›´æ–°ç¼“å­˜
	c.hashMu.Lock()
	c.lastPushedHash[peerId] = msgHash
	c.hashMu.Unlock()

	// 5. è®°å½•æ—¥å¿—
	b, _ := json.Marshal(msg)
	c.log.Info("push message", "peerId", peerId, "data", len(b))
	return nil
}

func (c *Client) computeMessageHash(msg *infra.Message) string {
	data, _ := json.Marshal(msg)
	return fmt.Sprintf("%x", sha256.Sum256(data))
}

func NewManager() (manager.Manager, error) {
	// 1. åˆå§‹åŒ– Manager (å®ƒæ˜¯ Informer å’Œ Cache çš„æ ¸å¿ƒ)
	// é»˜è®¤ä¼šå°è¯•åŠ è½½é›†ç¾¤å†…é…ç½®
	mgr, err := manager.New(ctrl.GetConfigOrDie(), manager.Options{
		Scheme: scheme,
		Cache: cache2.Options{
			DefaultLabelSelector: labels.SelectorFromSet(map[string]string{
				"app.kubernetes.io/managed-by": "wireflow-controller",
			}),
		},
	})
	return mgr, err
}
